--- a/views/accordion.twig
+++ b/views/accordion.twig
@@ -1,7 +1,7 @@
 <article class="accordion">
-    <h1 class="accordion-title">{{ accordian['fp_title'] }} <i class="i i-arrow-down"></i></h1>
+    <h1 class="accordion-title">{{ accordion['fp_title'] }} <i class="i i-arrow-down"></i></h1>
 
     <div class="accordion-content\">
-        {{ accordian['fp_content'] }}
+        {{ accordion['fp_content'] }}
     </div>
 </article>
