--- a/views/options-page.twig
+++ b/views/options-page.twig
@@ -5,8 +5,13 @@
 <form action="options.php" method="post">
     {{ function('settings_fields', settingsGroupName) }}
     {% for postType in postTypes %}
-        <label for="{{ postType }}">
-            <input type="checkbox" name="{{ fieldName }}[]" id="{{ postType }}" value="{{ postType }}" {% if postType in currentValue %}/> {{ postType }}
-        </label>
+        <div>
+            <label for="{{ postType }}">
+                <input type="checkbox" name="{{ fieldName }}[]" id="{{ postType }}"
+                       value="{{ postType }}" {% if postType in currentValue %} checked="checked"{% endif %}/> {{ postType | capitalize }}
+            </label>
+        </div>
     {% endfor %}
+    <br/>
+    <input type="submit" value="Save" class="button-primary" />
 </form>
